; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_path.c_git_path_basename.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_path.c_git_path_basename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_path_basename(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @git_path_basename_r(i32* %3, i8* %6)
  %8 = call i8* @git_buf_detach(i32* %3)
  store i8* %8, i8** %4, align 8
  %9 = call i32 @git_buf_dispose(i32* %3)
  %10 = load i8*, i8** %4, align 8
  ret i8* %10
}

declare dso_local i32 @git_path_basename_r(i32*, i8*) #1

declare dso_local i8* @git_buf_detach(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
